feat: implement structured logging with Log4j2 and MDC filter for request tracing